--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "navigatedata",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https",
@@ -39,6 +39,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "validator": "^13.12.0",
     "zod": "^3.23.5"
   },
