--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "navigatedata",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https",
@@ -28,6 +28,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
