--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "navigatedata",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https",
@@ -34,6 +34,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-intersection-observer": "^9.10.3",
     "react-wrap-balancer": "^1.1.0",
     "sanitize-html": "^2.13.0",
     "slug": "^9.0.0",
